@@ -217,9 +217,6 @@ abstract class CBaseListView extends CWidget
 	 */
 	public function renderPager()
 	{
-		if($this->dataProvider->getItemCount()<=0 || !$this->enablePagination)
-			return;
-
 		$pager=array();
 		$class='CLinkPager';
 		if(is_string($this->pager))
@@ -230,9 +227,21 @@ abstract class CBaseListView extends CWidget
 			if(isset($pager['class']))
 			{
 				$class=$pager['class'];
-				unset($pager);
+				unset($pager['class']);
 			}
 		}
+
+		if($this->enablePagination && $class==='CLinkPager')
+		{
+			if(!isset($pager['cssFile']))
+				CLinkPager::registerCssFile();
+			else if($pager['cssFile']!==false)
+				CLinkPager::registerCssFile($pager['cssFile']);
+		}
+
+		if($this->dataProvider->getItemCount()<=0 || !$this->enablePagination)
+			return;
+
 		$pager['pages']=$this->dataProvider->getPagination();
 		echo '<div class="'.$this->pagerCssClass.'">';
 		$this->widget($class,$pager);
